--- a/commerce/auctions/templates/auctions/electronics.html
+++ b/commerce/auctions/templates/auctions/electronics.html
@@ -4,8 +4,10 @@
 <section class="category-section">
 	<!-- ===== PARTIE Header ILLUSTRATION DE CATEGORY ===== -->
 	<div class="category-header">
-		<img src="" alt="" />
-		<div class="category-header-title">
+        <img 
+        src="http://localhost:8000/static/auctions/media/electronics-icons/electronics-illus0.svg" 
+        alt="" />
+<div class="category-header-title">
 			<h1></h1>
 			<p></p>
 		</div>
@@ -90,19 +92,20 @@
 				</li>
 			</ul>
 			<hr />
-
 		</div>
+
 
 		<!-- ===== PARTIE CONTENT DU BODY ===== -->
 		<div class="category-content grow">
-
 			<div class="category-explore">
                 <h3 class="explore-title">Explorer par catégorie<h3>
                 <ul class="explore-items">
                     <a href="#">
                         <li class="explore-item">
                             <div class="explore-item-img">
-                                <img src="" alt="" />
+                                <img 
+                                    src="http://localhost:8000/static/auctions/media/electronics-icons/téléphone.svg" 
+                                    alt="" />
                             </div>
                             <span>Téléphones mobile</span>
                         </li>
@@ -110,7 +113,9 @@
                     <a href="#">
                         <li class="explore-item">
                             <div class="explore-item-img">
-                                <img src="" alt="" />
+                                <img 
+                                    src="http://localhost:8000/static/auctions/media/electronics-icons/informatique.svg" 
+                                    alt="" />
                             </div>
                             <span>Informatique et réseaux</span>
                         </li>
@@ -118,7 +123,9 @@
                     <a href="#">
                         <li class="explore-item">
                             <div class="explore-item-img">
-                                <img src="" alt="" />
+                                <img 
+                                    src="http://localhost:8000/static/auctions/media/electronics-icons/console.svg" 
+                                    alt="" />
                             </div>
                             <span>Jeux vidéos et console</span>
                         </li>
@@ -126,7 +133,9 @@
                     <a href="#">
                         <li class="explore-item">
                             <div class="explore-item-img">
-                                <img src="" alt="" />
+                                <img 
+                                    src="http://localhost:8000/static/auctions/media/electronics-icons/Appareil photo.svg" 
+                                    alt="" />
                             </div>
                             <span>Appareils photo et caméscope</span>
                         </li>
@@ -134,7 +143,9 @@
                     <a href="#">
                         <li class="explore-item">
                             <div class="explore-item-img">
-                                <img src="" alt="" />
+                                <img 
+                                    src="http://localhost:8000/static/auctions/media/electronics-icons/casque.svg" 
+                                    alt="" />
                             </div>
                             <span>Casques et écouteurs</span>
                         </li>
@@ -142,15 +153,9 @@
                     <a href="#">
                         <li class="explore-item">
                             <div class="explore-item-img">
-                                <img src="" alt="" />
-                            </div>
-                            <span>Casques et écouteurs</span>
-                        </li>
-                    </a>
-                    <a href="#">
-                        <li class="explore-item">
-                            <div class="explore-item-img">
-                                <img src="" alt="" />
+                                <img 
+                                    src="http://localhost:8000/static/auctions/media/electronics-icons/enceinte audio.svg" 
+                                    alt="" />
                             </div>
                             <span>Enceintes et équipements audio</span>
                         </li>
@@ -158,7 +163,9 @@
                     <a href="#">
                         <li class="explore-item">
                             <div class="explore-item-img">
-                                <img src="" alt="" />
+                                <img 
+                                    src="http://localhost:8000/static/auctions/media/electronics-icons/accessoire téléphone.svg" 
+                                    alt="" />
                             </div>
                             <span>Accessoires pour téléphones portable</span>
                         </li>
@@ -166,7 +173,9 @@
                     <a href="#">
                         <li class="explore-item">
                             <div class="explore-item-img">
-                                <img src="" alt="" />
+                                <img 
+                                    src="http://localhost:8000/static/auctions/media/electronics-icons/tablette.svg" 
+                                    alt="" />
                             </div>
                             <span>Tablettes</span>
                         </li>
@@ -174,7 +183,9 @@
                     <a href="#">
                         <li class="explore-item">
                             <div class="explore-item-img">
-                                <img src="" alt="" />
+                                <img 
+                                    src="http://localhost:8000/static/auctions/media/electronics-icons/imprimante.svg" 
+                                    alt="" />
                             </div>
                             <span>Imprimante</span>
                         </li>
@@ -182,7 +193,9 @@
                     <a href="#">
                         <li class="explore-item">
                             <div class="explore-item-img">
-                                <img src="" alt="" />
+                                <img 
+                                    src="http://localhost:8000/static/auctions/media/electronics-icons/télévision.svg" 
+                                    alt="" />
                             </div>
                             <span>Télévisions</span>
                         </li>
@@ -191,62 +204,165 @@
             </div>
 
 			<div class="category-explore">
-                <h3 class="explore-title">Objet de collection<h3>
-                <ul class="explore-items">
-                    <a href="#">
-                        <li class="explore-item">
-                            <div class="explore-item-img">
-                                <img src="" alt="" />
-                            </div>
-                            <span></span>
-                        </li>
-                    </a>    
-                </ul>
-            </div>
-            <hr />
-
-            <div class="category-explore">
-                <h3 class="explore-title">Luxe et accessoire<h3>
-                <ul class="explore-items">
-                    <a href="#">
-                        <li class="explore-item">
-                            <div class="explore-item-img">
-                                <img src="" alt="" />
-                            </div>
-                            <span></span>
-                        </li>
-                    </a>    
-                </ul>
-            </div>
-            <hr />
-
-            <div class="category-explore">
                 <h3 class="explore-title">Explorer par marques<h3>
-                <div class="explore-carousel" >
-                    <a class="explore-sildes" href="#">
-                        <div class="slides-content">
-                            <div class="slides-content-img">
-                                <img src="" alt="" />
+                <ul class="explore-items">
+                    <a href="#">
+                        <li class="explore-item">
+                            <div class="explore-item-img">
+                                <img 
+                                    src="http://localhost:8000/static/auctions/media/electronics-icons/xiaomi.svg" 
+                                    alt="" />
                             </div>
-                            <h6></h6>
-                            <span></span>
-                        </div>    
-                    </a>
-                <div>    
+                            <span>Xiaomi</span>
+                        </li>
+                    </a>    
+                    <a href="#">
+                        <li class="explore-item">
+                            <div class="explore-item-img">
+                                <img 
+                                    src="http://localhost:8000/static/auctions/media/electronics-icons/jabra.svg" 
+                                    alt="" />
+                            </div>
+                            <span>Jabra</span>
+                        </li>
+                    </a>    
+                    <a href="#">
+                        <li class="explore-item">
+                            <div class="explore-item-img">
+                                <img 
+                                    src="http://localhost:8000/static/auctions/media/electronics-icons/asus.svg" 
+                                    alt="" />
+                            </div>
+                            <span>Asus</span>
+                        </li>
+                    </a>    
+                    <a href="#">
+                        <li class="explore-item">
+                            <div class="explore-item-img">
+                                <img 
+                                    src="http://localhost:8000/static/auctions/media/electronics-icons/pny.svg" 
+                                    alt="" />
+                            </div>
+                            <span>PNY</span>
+                        </li>
+                    </a>    
+                    <a href="#">
+                        <li class="explore-item">
+                            <div class="explore-item-img">
+                                <img 
+                                    src="http://localhost:8000/static/auctions/media/electronics-icons/gopro.svg" 
+                                    alt="" />
+                            </div>
+                            <span>GoPro</span>
+                        </li>
+                    </a>    
+                    <a href="#">
+                        <li class="explore-item">
+                            <div class="explore-item-img">
+                                <img 
+                                    src="http://localhost:8000/static/auctions/media/electronics-icons/mobilis.svg" 
+                                    alt="" />
+                            </div>
+                            <span>Mobilis</span>
+                        </li>
+                    </a>    
+                    <a href="#">
+                        <li class="explore-item">
+                            <div class="explore-item-img">
+                                <img 
+                                    src="http://localhost:8000/static/auctions/media/electronics-icons/blackview.svg" 
+                                    alt="" />
+                            </div>
+                            <span>Blackview</span>
+                        </li>
+                    </a>    
+                    <a href="#">
+                        <li class="explore-item">
+                            <div class="explore-item-img">
+                                <img 
+                                    src="http://localhost:8000/static/auctions/media/electronics-icons/umidigi.svg" 
+                                    alt="" />
+                            </div>
+                            <span>UMIDIGI</span>
+                        </li>
+                    </a>    
+                    <a href="#">
+                        <li class="explore-item">
+                            <div class="explore-item-img">
+                                <img 
+                                    src="http://localhost:8000/static/auctions/media/electronics-icons/romoss.svg" 
+                                    alt="" />
+                            </div>
+                            <span>Romoss</span>
+                        </li>
+                    </a> 
+                    <a href="#">
+                        <li class="explore-item">
+                            <div class="explore-item-img">
+                                <img 
+                                    src="http://localhost:8000/static/auctions/media/electronics-icons/poco.svg" 
+                                    alt="" />
+                            </div>
+                            <span>Poco</span>
+                        </li>
+                    </a>    
+                </ul>
             </div>
-            <div class="category-explore">
-                <h3 class="explore-title">Explorer plus de sélections<h3>
-                <div class="explore-carousel" >
-                    <a class="explore-sildes" href="#">
-                        <div class="slides-content">
-                            <div class="slides-content-img">
-                                <img src="" alt="" />
-                            </div>
-                            <h6></h6>
-                            <span></span>
-                        </div>    
-                    </a>
-                <div>    
+            <hr />
+
+            <div class="categ-illustration text-color-maron">
+                <img 
+                    src="http://localhost:8000/static/auctions/media/electronics-icons/electronics illus1.svg" 
+                    alt="" />
+                <div class="categ-discovery">
+                    <div class="categ-hg-title">
+                        <h2 class="text-color-maron">High Tech</h2>
+                        <p class="text-color-maron">
+                            Découvrez tous les produits de 
+                            boutique boulanger
+                        </p>
+                    </div>
+
+                    <div class="categ-hg-btn flex gap10 align-center" id="categ-btn">
+                        <span>Tout afficher</span>
+                        <img
+                            id="categ-img"
+                            class="categ-hg-img"
+                            src="http://localhost:8000/static/auctions/media/arrow_forward_white.svg"
+                            alt=""
+                        />
+                    </div>
+                </div>
+            </div>
+
+            <br/>
+            <br/>
+            
+            <div class="categ-illustration">
+                <img 
+                    src="http://localhost:8000/static/auctions/media/electronics-icons/electronics illus2.svg" 
+                    alt="" />
+                <div class="categ-discovery">
+                    <div href="#" class="categ-hg-title text-color-white">
+                        <h2 class="">Extension de 
+                            garentie Allianz</h2>
+                        <p>
+                            Pour vos objets High-Tech
+                        </p>
+                    </div>
+
+                    <div class="categ-hg-btn flex gap10 align-center" id="categ-btn">
+                        <span>Découvrer</span>
+                        <img
+                            id="categ-img"
+                            class="categ-hg-img"
+                            src="http://localhost:8000/static/auctions/media/arrow_forward_white.svg"
+                            alt=""
+                        />
+                    </div>
+
+                    <p>Proposé par Allianz.Voir les conditions</p>
+                </div>
             </div>
 			<div class="about-category"></div>
 		</div>
