--- a/commerce/auctions/templates/auctions/listing.html
+++ b/commerce/auctions/templates/auctions/listing.html
@@ -140,13 +140,12 @@
 		</div>
 	</div>
 
-	<div style="border-left: 1px solid #eae8e8; height: 398px"></div>
 	<!-- ==== TOP5 BIDS ====-->
 	<div class="seller-wrapper">
 		<div class="garentie-container">
 			<h6>Acheter en toute confiance</h6>
 			<div class="flex gap4">
-				<img src="static/auctions/media/shield_blue.svg" alt="" />
+				<img src="http://localhost:8000/static/auctions/media/shield_blue.svg" alt="" />
 				<div class="garentie-details">
 					<span>Garentie client eBay</span>
 					<p>
