--- a/mail/mail/static/mail/styles.css
+++ b/mail/mail/static/mail/styles.css
@@ -52,6 +52,10 @@ button {
 	background: none;
 }
 
+.margin1 {
+	margin-bottom: 2.81em;
+}
+
 .flex {
 	display: flex;
 }
@@ -87,6 +91,248 @@ button {
 }
 .flex-wrapp {
 	flex-wrap: wrap;
+}
+
+.auth-main {
+	width: 100vw;
+	height: 95vh;
+	background: #fff;
+}
+footer {
+	width: 100vw;
+	height: 5vh;
+	background: #fff;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.footer-div {
+	width: 28.125rem;
+	padding-left: 0.5em;
+	padding-right: 0.5em;
+}
+
+.signup-container,
+.login-container {
+	width: 28.125rem;
+	height: 31.375rem;
+	border-radius: 0.5rem;
+	border: 1px solid #dadce0;
+}
+
+.xmailer-div {
+	margin-top: 2.81em;
+	margin-bottom: 1.06em;
+}
+.xmailer-div img,
+.xmailer-div img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.login-container form,
+.signup-container form {
+	width: 28.125rem;
+	flex-grow: 1;
+	overflow: hidden;
+}
+
+.login-carousel,
+.signup-carousel {
+	transition: transform 0.5s ease-in-out;
+	transform: translate(0);
+}
+
+.login-slide,
+.signup-slide {
+	width: 28.125rem;
+	padding-left: 2.56rem;
+	padding-right: 2.56rem;
+	flex: 0 0 100%;
+}
+
+.login-slide span,
+.signup-slide span {
+	color: #706368;
+	font-family: "Inter";
+	font-size: 0.85rem;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 137.023%; /* 1.11331rem */
+}
+
+.login-slide > span a,
+.signup-slide > span a {
+	text-decoration: none;
+	border-radius: 4px;
+	color: rgb(26, 115, 232);
+	display: inline-block;
+	font-weight: 500;
+	letter-spacing: 0.25px;
+}
+
+.login-h1,
+.signup-h1 {
+	margin-bottom: 2.2em;
+	text-align: center;
+}
+
+.login-h1 h3,
+.signup-h1 h3 {
+	font-family: "Inter";
+	font-size: 1.5rem;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+	margin-bottom: 0.35em;
+}
+
+.login-h1 span,
+.signup-h1 span {
+	color: #333;
+	font-family: "Inter";
+	font-size: 0.9375rem;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+}
+
+.h1-margin {
+	margin-bottom: 1.3em;
+}
+
+.login-user {
+	padding: 0.25rem 0.41em;
+	border-radius: 6.25rem;
+	border: 1px solid #dadce0;
+}
+
+.login-avatar {
+	width: 1.35rem;
+	height: 1.35rem;
+	border-radius: 6.25rem;
+	margin-right: 1em;
+}
+
+.login-avatar img {
+	width: 100%;
+	height: 100%;
+	border-radius: 6.25rem;
+	object-fit: cover;
+	vertical-align: unset;
+}
+
+.login-user span {
+	color: #404043;
+	font-family: "Inter";
+	font-size: 0.88rem;
+	font-style: normal;
+	font-weight: 500;
+	line-height: normal;
+	margin-right: 0.25em;
+}
+
+.myform-group {
+	margin-bottom: 3em;
+	width: 100%;
+}
+.myform-group span {
+	color: #404043;
+	font-family: "Inter";
+	font-size: 0.88rem;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+	margin-right: 0.25em;
+	margin-top: 0.5em;
+}
+.myform-control {
+	width: 100%;
+	height: 3.5rem;
+	border-radius: 0.19rem;
+	padding-left: 1rem;
+	border: 1px solid #dadce0;
+
+	color: #706368;
+	font-family: "Inter";
+	font-size: 1rem;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+	margin-bottom: 0.26em;
+}
+
+.myform-cntrl-margin {
+	margin-top: 2.5em;
+}
+
+.myform-group a {
+	color: rgb(26, 115, 232);
+	font-family: "Inter";
+	font-size: 0.88rem;
+	font-style: normal;
+	font-weight: 500;
+	line-height: normal;
+	text-decoration: none;
+}
+
+.show-password {
+	gap: 1.38em;
+}
+
+.step-btn-wrapper {
+	width: 100%;
+	color: #5f6368;
+	font-family: "Inter";
+	font-size: 0.84375rem;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+}
+
+.step-btn-wrapper a {
+	padding: 0.25rem 0.35rem;
+	color: #1a73ec;
+	font-family: "Inter";
+	font-size: 0.84rem;
+	font-style: normal;
+	font-weight: 600;
+	text-decoration: none;
+}
+
+.step-btn-wrapper a:hover {
+	background: rgba(195, 220, 254, 0.2);
+}
+
+.step-btn,
+.submit-btn {
+	padding: 0.69em 1.44em;
+	border-radius: 0.3125em;
+	background: #1a73e8;
+	border: transparent;
+	outline: none;
+
+	color: #fff;
+	font-family: "Inter";
+	font-size: 0.875rem;
+	font-style: normal;
+	font-weight: 500;
+	line-height: normal;
+}
+.step-btn:hover,
+.submit-btn:hover {
+	background: #1a73e8;
+}
+
+.xmailer-support {
+	color: #56595c;
+	font-family: "Inter";
+	font-size: 0.6875rem;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
 }
 
 button:hover {
