--- a/mail/mail/templates/mail/inbox.html
+++ b/mail/mail/templates/mail/inbox.html
@@ -5,15 +5,22 @@
 	<header>
 		<!-- Logo link and sidebar button-->
 		<div class="logos flex">
-			<a
-				href="#"
-				class="btn-3bar"
-			>
-				<img class="usa-btn" id="menu" src="static/icons/3bars menu.svg" alt="" />
+			<a href="#" class="btn-3bar">
+				<img
+					class="usa-btn"
+					id="menu"
+					src="static/icons/3bars menu.svg"
+					alt=""
+				/>
 			</a>
 			<a href="#" class="logo-link">
 				<img src="static/icons/X logo.svg" alt="" />
-				<img class="usa-btn" id="logo-text" src="static/icons/Mailer.svg" alt="" />
+				<img
+					class="usa-btn"
+					id="logo-text"
+					src="static/icons/Mailer.svg"
+					alt=""
+				/>
 			</a>
 		</div>
 		<!-- Email search bar-->
@@ -26,14 +33,24 @@
 		<!-- Cuurent user email -->
 		<div class="user-params flex grow justify-right align-center">
 			<div class="user-themes" id="settings">
-					<img class="usa-btn" id="settings-icon" src="static/icons/settings.svg" alt="" />
+				<img
+					class="usa-btn"
+					id="settings-icon"
+					src="static/icons/settings.svg"
+					alt=""
+				/>
 			</div>
 			<div class="user-apps" id="apps-btn">
-					<img class="usa-btn apps" id="apps-btn" src="static/icons/group-apps.svg" alt="" />
+				<img
+					class="usa-btn apps"
+					id="apps-btn"
+					src="static/icons/group-apps.svg"
+					alt=""
+				/>
 			</div>
 
 			<div class="current-user-wrapper">
-				<div class="current-user" id="current-user" >
+				<div class="current-user" id="current-user">
 					<img
 						id="current-user"
 						class="usa-btn user-usa grow"
@@ -53,9 +70,10 @@
 		<!-- Compose New email button -->
 		<button class="btn-compose" id="compose">
 			<div class="compose-button">
-			<img src="static/icons/pencil.svg" alt="" />
-			<span>Compose</span>
-		</div></button>
+				<img src="static/icons/pencil.svg" alt="" />
+				<span>Compose</span>
+			</div>
+		</button>
 
 		<!-- Nav button container -->
 		<div class="nav-container">
@@ -63,58 +81,92 @@
 				<li>
 					<button name="mailbox" class="nav-button" id="inbox">
 						<div class="button-content">
-							<img class="nav-icons" id="inbox-icon" src="static/icons/inbox.svg" alt="" />
-							<div class="inbox-count grow flex space-between align-center">
+							<img
+								class="nav-icons"
+								id="inbox-icon"
+								src="static/icons/inbox.svg"
+								alt=""
+							/>
+							<div
+								class="inbox-count grow flex space-between align-center"
+							>
 								<span>Inbox</span>
-								<span class="total-emails flex align-center">{{ inbox_count }}</span>
-							</div>							
+								<span class="total-emails flex align-center"
+									>{{ inbox_count }}</span
+								>
+							</div>
 						</div>
 					</button>
 				</li>
 				<li>
 					<button name="mailbox" class="nav-button" id="starred">
 						<div class="button-content">
-							<img class="nav-icons" id="star-icon" src="static/icons/starred.svg" alt="" /><span
-								>Starred</span
-							>
+							<img
+								class="nav-icons"
+								id="star-icon"
+								src="static/icons/starred.svg"
+								alt=""
+							/><span>Starred</span>
 						</div>
 					</button>
 				</li>
 				<li>
 					<button name="mailbox" class="nav-button" id="archived">
 						<div class="button-content">
-							<img class="nav-icons" id="archive-icon" src="static/icons/archived.svg" alt="" /><span
-								>Archived</span
-							>
+							<img
+								class="nav-icons"
+								id="archive-icon"
+								src="static/icons/archived.svg"
+								alt=""
+							/><span>Archived</span>
 						</div>
 					</button>
 				</li>
 				<li>
 					<button name="mailbox" class="nav-button" id="sent">
 						<div class="button-content">
-							<img class="nav-icons" id="sent-icon" src="static/icons/sent.svg" alt="" /><span
-								>Sent</span
-							>
+							<img
+								class="nav-icons"
+								id="sent-icon"
+								src="static/icons/sent.svg"
+								alt=""
+							/><span>Sent</span>
 						</div>
 					</button>
 				</li>
 				<li>
 					<button name="mailbox" class="nav-button" id="spam">
 						<div class="button-content">
-							<img class="nav-icons" id="draft-icon" src="static/icons/draft.svg" alt="" />
-							<div class="inbox-count grow flex space-between align-center">
+							<img
+								class="nav-icons"
+								id="draft-icon"
+								src="static/icons/draft.svg"
+								alt=""
+							/>
+							<div
+								class="inbox-count grow flex space-between align-center"
+							>
 								<span>Draft</span>
-								<span class="total-emails">{{ inbox_count }}</span>
-							</div>							
+								<span class="total-emails"
+									>{{ inbox_count }}</span
+								>
+							</div>
 						</div>
 					</button>
 				</li>
 				<li>
-					<button name="mailbox" class="nav-button expand-btn" id="spam">
+					<button
+						name="mailbox"
+						class="nav-button expand-btn"
+						id="spam"
+					>
 						<div class="button-content">
-							<img class="nav-icons" id="expand-icon" src="static/icons/expand.svg" alt="" /><span
-								id="expand-span">More</span
-							>
+							<img
+								class="nav-icons"
+								id="expand-icon"
+								src="static/icons/expand.svg"
+								alt=""
+							/><span id="expand-span">More</span>
 						</div>
 					</button>
 				</li>
@@ -122,18 +174,24 @@
 					<li>
 						<button name="mailbox" class="nav-button" id="spam">
 							<div class="button-content">
-								<img class="nav-icons" id="spam-icon" src="static/icons/spam.svg" alt="" /><span
-									>Spam</span
-								>
+								<img
+									class="nav-icons"
+									id="spam-icon"
+									src="static/icons/spam.svg"
+									alt=""
+								/><span>Spam</span>
 							</div>
 						</button>
 					</li>
 					<li>
 						<button name="mailbox" class="nav-button" id="trash">
 							<div class="button-content">
-								<img class="nav-icons" id="trash-icon" src="static/icons/trash.svg" alt="" /><span
-									>Trash</span
-								>
+								<img
+									class="nav-icons"
+									id="trash-icon"
+									src="static/icons/trash.svg"
+									alt=""
+								/><span>Trash</span>
 							</div>
 						</button>
 					</li>
@@ -141,8 +199,15 @@
 				<li class="label-list">
 					<div name="mailbox" class="label-button" id="trash">
 						<div class="label-content grow">
-							<span class="label-nav">Labels</span> 
-							<button class="nav-label-btn"><img class="nav-icons" id="add-icon" src="static/icons/add.svg" alt="" /></button>
+							<span class="label-nav">Labels</span>
+							<button class="nav-label-btn">
+								<img
+									class="nav-icons"
+									id="add-icon"
+									src="static/icons/add.svg"
+									alt=""
+								/>
+							</button>
 						</div>
 					</div>
 				</li>
@@ -150,13 +215,15 @@
 				<li>
 					<button name="mailbox" class="nav-button" id="trash">
 						<div class="button-content">
-							<img class="nav-icons" id="note-icon" src="static/icons/notes.svg" alt="" /><span
-								>Note</span
-							>
+							<img
+								class="nav-icons"
+								id="note-icon"
+								src="static/icons/notes.svg"
+								alt=""
+							/><span>Note</span>
 						</div>
 					</button>
 				</li>
-
 			</ul>
 		</div>
 	</div>
@@ -197,22 +264,23 @@
 				<div class="settings-header">
 					<div class="flex justify">
 						<h5>Quick settings</h5>
-						<span></span>
 					</div>
 					<a href="#" id="all-settings"
-						><div><span>See all settings</span></div></a
+						><div class="flex justify-center align-center">
+							<span>See all settings</span>
+						</div></a
 					>
 				</div>
-
-				<hr />
 				<div class="settings-body" data-simplebar>
 					<div class="mails-apps">
 						<span class="settings-span">Apps in Mails</span>
 						<div class="wpr flex justify">
 							<div class="costumize-apps flex justify column">
 								<p>Chat and Meet</p>
-								<a href="#">
-									<p class="costumize">Costumize</p></a
+								<a
+									href="#"
+									class="costumize flex justify-center align-center"
+									>Costumize</a
 								>
 							</div>
 							<img
@@ -236,6 +304,7 @@
 										id="default-density"
 										name="default"
 										type="radio"
+										checked
 									/>
 									<label for="default-density">Default</label>
 								</div>
@@ -248,11 +317,11 @@
 							<div class="density-radios flex justify">
 								<div class="radio-inputs flex justify-center">
 									<input
-										id="default-density"
-										name="default"
+										id="comfortable-density"
+										name="comfortable"
 										type="radio"
 									/>
-									<label for="default-density"
+									<label for="comfortable-density"
 										>Comfortable</label
 									>
 								</div>
@@ -265,11 +334,11 @@
 							<div class="density-radios flex justify">
 								<div class="radio-inputs flex justify-center">
 									<input
-										id="default-density"
-										name="default"
+										id="compact-density"
+										name="compact"
 										type="radio"
 									/>
-									<label for="default-density">Compact</label>
+									<label for="compact-density">Compact</label>
 								</div>
 								<img
 									src="static/icons/density illustrations3.svg"
@@ -283,8 +352,10 @@
 
 					<div class="themes-settings">
 						<div class="flex justify">
-							<span class="settings-span">Themes</span>
-							<a href="#s"><span class="all-themes">View all</span>
+							<span class="settings-span">Theme</span>
+							<a class="all-themes" href="#"
+								><span>View all</span></a
+							>
 						</div>
 						<div class="themes-container">
 							<ul class="flex gap justify flex-wrapp">
@@ -297,15 +368,19 @@
 									</li>
 								</a>
 								{% for wallpaper in all_wallpapers %}
-									<a href="#" class="wallpaper-item" id="{{wallpaper.id}}" >
-										<li class="wallpaper-list">
-											<img
-												src="{{ wallpaper.image.url }}"
-												alt=""
-											/>
-										</li>
-									</a>
-								{% endfor  %}
+								<a
+									href="#"
+									class="wallpaper-item"
+									id="{{wallpaper.id}}"
+								>
+									<li class="wallpaper-list">
+										<img
+											src="{{ wallpaper.image.url }}"
+											alt=""
+										/>
+									</li>
+								</a>
+								{% endfor %}
 							</ul>
 						</div>
 					</div>
@@ -322,55 +397,53 @@
 			<img class="app-icon" src="static/icons/idea.svg" alt="" />
 		</div>
 	</div>
-<!-- Compose Modal -->
-<div class="compose-container" id="compose-view">
-	<div class="compose-header-wrapper">
-		<div class="compose-header">
-			<h4 id="response-subject">New Message</h4>
+	<!-- Compose Modal -->
+	<div class="compose-container" id="compose-view">
+		<div class="compose-header-wrapper">
+			<div class="compose-header">
+				<h4 id="response-subject">New Message</h4>
+			</div>
+			<div class="scales-btn">
+				<a href="#" id="minimize"
+					><img id="minimize" src="static/icons/minimize.svg" alt=""
+				/></a>
+				<a href="#" id="full-window"
+					><img
+						id="full-window"
+						src="static/icons/open_in_full.svg"
+						alt=""
+				/></a>
+				<a href="#" id="close-compose"
+					><img
+						id="close-compose"
+						src="static/icons/close.svg"
+						alt=""
+				/></a>
+			</div>
 		</div>
-		<div class="scales-btn">
-			<a href="#" id="minimize"><img id="minimize" src="static/icons/minimize.svg" alt="" /></a>
-			<a href="#" id="full-window"><img id="full-window" src="static/icons/open_in_full.svg" alt="" /></a>
-			<a href="#" id="close-compose"><img id="close-compose" src="static/icons/close.svg" alt="" /></a>
-		</div>
+		<form id="compose-form">
+			<input hidden value="{{ request.user.email }}" />
+			<div class="compose-input">
+				<input id="compose-recipients" placeholder="Recipients" />
+			</div>
+			<hr />
+			<div class="compose-input">
+				<input id="compose-subject" placeholder="Subject" />
+			</div>
+			<hr />
+			<div class="compose-textarea">
+				<textarea id="compose-body"></textarea>
+				<div class="text-editor" id="toolbar"></div>
+			</div>
+
+			<div class="compose-submit">
+				<div class="send-btn">
+					<input type="submit" value="Send" />
+				</div>
+				<div class="edit-text"></div>
+			</div>
+		</form>
 	</div>
-	<form id="compose-form">
-		<input
-			hidden
-			value="{{ request.user.email }}"
-		/>
-		<div class="compose-input">
-			<input
-				id="compose-recipients"
-				placeholder="Recipients"
-			/>
-		</div>
-		<hr />
-		<div class="compose-input">
-			<input
-				id="compose-subject"
-				placeholder="Subject"
-			/>
-		</div>
-		<hr />
-		<div class="compose-textarea">
-			<textarea
-				id="compose-body"
-			></textarea>
-			<div class="text-editor" id="toolbar">
-			</div>
-		</div>
-
-		<div class="compose-submit">
-			<div class="send-btn">
-				<input type="submit" value="Send" />
-			</div>
-			<div class="edit-text">
-			</div>
-		</div>
-	</form>
-</div>
-
 </main>
 {% endblock %} {% block script %}
 <script src="https://unpkg.com/simplebar@2.4.3/dist/simplebar.min.js"></script>
